[package]
name = "bed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
cxx = "1.0.143"
log = "0.4.27"
env_logger = "0.11.8"
encrypted_backup = { version = "0.0.1", package = "bitcoin-encrypted-backup", features = ["devices", "miniscript_latest", "tokio"]}

[dev-dependencies]

[build-dependencies]
cxx-build = "1.0.149"
